<resources>
    <string name="app_name">PowderGuru2</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="auth_failed">Wrong email or password. Try again or register</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email_and_a_password_to_register_to_pg">Enter your email and a password to register to PG</string>
    <string name="powder_guru">Powder Guru</string>
    <string name="login">login</string>
    <string name="emaill">Email</string>
    <string name="no_pg_account_register">No PG account? Register!</string>
    <string name="sign_out">Sign out</string>
    <string name="password">Password</string>
    <string name="instructions">Search for a city and country (optional) below to get the (ski) weather forecast for tomorrow. E.G Gerlos or Zell Am See, Austria</string>
    <string name="city">City</string>
    <string name="search">Search</string>
    <string name="saved">Saved spots</string>
    <string name="add">Save</string>
    <string name="title">Powder Guru</string>
    <string name="nearest">"Nearest Spot"</string>
    <string name="temp_at_1200_5_c">Temp (at 1200): 5°C</string>
    <string name="chance_of_sunshine_98">Chance of sunshine: 98%</string>
    <string name="min_temp_10_c">Min temp = 10 °C</string>
    <string name="max_temp_10_c">Max temp = 10 °C</string>
    <string name="chance_of_snowfall">Chance of snowfall:</string>
    <string name="welcome_to">Welcome to</string>
    <string name="sign_in_with_your_google_account">Sign in with your Google account</string>
    <string name="sign_out2">Sign Out</string>
    <string name="saved_spots">Saved Spots</string>
    <string name="log_out">Log Out</string>


</resources>
