<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.koen.powderguru2.SignupActivity"
    android:background="@color/darkblue">

    <TextView
        android:text="@string/powder_guru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>


    <Button
        android:id="@+id/gotoregister"
        android:onClick="gotoregister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/no_pg_account_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginBottom="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/loginbutton"
        android:onClick="login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/login"
        android:textColor="@color/darkblue"
        android:textStyle="bold"
        android:layout_marginBottom="70dp"
        android:layout_above="@+id/gotoregister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/emaillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emaill"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@color/bluegrey"
        android:layout_above="@+id/loginbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="69dp" />

    <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/bluegrey"
        android:layout_above="@+id/loginbutton"
        android:layout_alignLeft="@+id/emaillogin"
        android:layout_alignStart="@+id/emaillogin"
        android:layout_marginBottom="26dp" />


</RelativeLayout>